--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "react": "^17.0.2",
     "stylelint": "^14.3.0",
     "stylelint-config-recommended": "^6.0.0",
-    "stylelint-config-standard": "^24.0.0"
+    "stylelint-config-standard": "^24.0.0",
+    "webpack": "^5.72.1"
   },
   "dependencies": {
     "express": "^4.18.1"
